style.css
/* Site wide styling */

Body * {
    font-family: "Open Sans", "Droid Sans", Helvetica, Arial, Sans-serif !important;
}

a {
    color: #08c;
    text-decoration: none;
}

a:hover {
    color: #80aeff;
    transition: color 200ms ease-out;
}

s,strike,del {
    opacity: 0.75;
}

code {
    background: #f2f7fa;
    border-radius: 3px;
    color: #1486cc;
    font-family: Inconsolata, monospace !important;
    white-space: nowrap;
    padding: 2px 4px;
}

pre {
    background: #fcfcfc;
    border: 1px solid #f2f2f2;
    border-radius: 3px;
    color: #707070;
    display: block;
    font-family: Inconsolata, monospace !important;
    line-height: 1.5;
    word-break: break-all;
    margin: 20px 0;
    padding: 10px;
}

input:focus,textarea:focus {
    outline: none;
}

input[type="email"],
input[type="number"],
input[type="password"],
input[type="search"],
input[type="tel"],
input[type="text"],
input[type="url"],
input[type="color"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="month"],
input[type="time"],
input[type="week"],
textarea {
    background: linear-gradient(to bottom, #fafafa, #fdfdfd);
    border: 1px solid rgba(0, 0, 0, 0.22) !important;
    border-radius: 2.5px;
    box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.04),
                inset 0 0 0 1px rgba(0, 0, 0, 0.02),
                0 1px 0 1px rgba(255, 255, 255, 0.30);
    color: #323232;
    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
    padding: 6px 8px !important;
    transition: border-color 200ms ease-out, box-shadow 200ms ease-out;
    background-clip: padding-box;
}

input[type="email"]:focus,
input[type="number"]:focus,
input[type="password"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="text"]:focus,
input[type="url"]:focus,
input[type="color"]:focus,
input[type="date"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
textarea:focus {
    border-color: rgba(61, 155, 218, 0.80);
    box-shadow: inset 0 0 0 1px rgba(61, 155, 218, 0.23),
                0 1px 0 1px rgba(255, 255, 255, 0.30);
}


button, .fancy-toggle-button .add, .sidebox.submit.submit-text a, .fancy-toggle-button .remove, .RESshortcutside, .RESDashboardToggle {
    background-color: transparent;
    background: linear-gradient(to bottom,
                              transparent,
                              transparent 50%,
                              rgba(0 ,0 ,0 , 0.04)
                              );
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 2.5px;
    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05),
                inset 0 1px 0 0 rgba(255, 255, 255, 0.45),
                inset 0 -1px 0 0 rgba(255, 255, 255, 0.15),
                0 1px 0 1px rgba(255, 255, 255, 0.15);
    color: #323232;
    padding: 4px 10px;
    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
}

button:active, .sidebox.submit a:active {
    background-color: rgba(0, 0, 0, 0.05);
    background-image: none;
    border-color: rgba(0, 0, 0, 0.25);
    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.05),
                0 1px 0 1px rgba(255, 255, 255, 0.30);
}

/* Main Content */

#sr-header-area {
    background-image: linear-gradient(#fff, #f3f3f3);
}

#header {
    border: none;
    background: none;
    text-align: center;
}

.content[role="main"] {
    margin-left: 0;
    position: relative;
    width: calc(100% - 342px);
    padding: 0 16px;
}

.content[role="main"]::before {
    background: linear-gradient(to right, #fff 0%, #C9C9C9 5%, #C9C9C9 50%, #C9C9C9 95%, #fff 100%);
    height: 1px;
    width: calc(100% - 32px);
    content: "";
    position: absolute;
    left: 16px;
    top: 0;
}

.content[role="main"] h1 {
    text-align: center;
}

.link {
    position: relative;
    margin: 0;
    padding: 1px 0 0 0;
}

.link::after {
    content: " ";
    position: absolute; 
    height: 1px;
    width: 100%;
    background: linear-gradient(to right, #fff 0%, #f2f2f2 5%, #f2f2f2 50%, #f2f2f2 95%, #fff 100%);
}

.link .entry {
    padding: 16px 0;
}

.link .title {
    font-size: 18px;
    color: #08c;
}

.link.self .domain {
    display: none;
}

.midcol {
    margin: 21px 7px 5.5px 0;
}

.arrow {
    background-image: url(%%arrows%%) !important;
}

.arrow.up {
    background-position: 0 0;
}

.arrow.upmod {
    background-position: -15px 0;
}

.arrow.down {
    background-position: -30px 0;
}

.arrow.downmod {
    background-position: -45px 0;
}

/* Reddit links (header-bottom-right) */

#header-bottom-right {
    border-top-left-radius: 0;
    border-bottom-left-radius: 7px;
    font-size: 12px;
    background: none;
    padding: 4px 10px;
    position: absolute;
    top: initial !important;
    bottom: 0 !important;
    right: 0;
}

#header-bottom-right a {
    color: #333;
}

/* Nav Bar (header-bottom-left) */

#header-bottom-left {
    display: inline-block;
    background: url(%%nav-bg%%) no-repeat 3px -9px;
    background-size: 100% 110px;
    padding: 18px 0 28px;
}

#header-bottom-left::after {
    content: " ";
    height: 46.4px;
    width: 3px;
    position: absolute;
    border: 1px solid #bbb8b7;
    border-radius: 0 3px 3px 0;
    border-left: none;
    background: linear-gradient(#fff,#f5f5f5);
    margin-left: -1px;
}

#header-img.default-header, #header-img-a {
    width: 35px;
    position: absolute;
    left: 15px;
    margin: 0;
    overflow: hidden;
    margin-top: 4px;
}

#header-img-a {
    margin-top: 2px;
}

.pagename {
    display: inline-block;
    position: relative;
    height: 48px;
    font-size: 0;
    margin-right: 0;
    visibility: hidden;
}
/* ... */

